// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`--locale option 1`] = `
" {
   en: {
[31m-    nest: {[39m
[31m-      world: \\"world!\\"[39m
[31m-    }[39m
[31m-    hello: \\"hello!\\"[39m
[32m+    hello: \\"世界\\"[39m
   }
 }
"
`;

exports[`--target option 1`] = `
" {
   ja: {
[31m-    nest: {[39m
[31m-      world: \\"世界！\\"[39m
[31m-    }[39m
[32m+    world: \\"ザ・ワールド\\"[39m
[31m-    hello: \\"こんにちは！\\"[39m
[32m+    hello: \\"こんにちわわわ！\\"[39m
   }
 }
"
`;

exports[`--target-paths option 1`] = `
" {
[32m+  ja: {[39m
[32m+    hello: \\"こんにちわわわ！\\"[39m
[32m+    world: \\"ザ・ワールド\\"[39m
[32m+  }[39m
[32m+  lang: {[39m
[32m+    hello: \\"世界\\"[39m
[32m+  }[39m
   en: {
[31m-    nest: {[39m
[31m-      world: \\"world!\\"[39m
[31m-    }[39m
[31m-    hello: \\"hello!\\"[39m
[32m+    hello: \\"world\\"[39m
   }
 }
"
`;
